--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
         
     </head>
 
-    <body background="OIP.jpeg">
+    <body>
         <header class="header">
             <a href="#" class="logo">DAVID.</a>
 
